# quizdd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  package.json  tsconfig.json  vite.config.ts
RELEASE_DOCS/: CHANGELOG.md  README.md  RELEASE_INSTRUCTIONS.md  THIRD_PARTY_LICENSES.md
public/audio/: README.md
scripts/: analyze-bundle.js  build-and-package.js  build_release.ps1
src/: App.module.css  App.tsx  README.md  SimpleApp.tsx  debug.html  main.tsx  simple-main.tsx  test-debug.html  test-minimal.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: README.md
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  schema.sql
src-tauri/src/database/tests/: integration_tests.rs
src-tauri/src/models/: custom_mix.rs  mod.rs  profile.rs  progress.rs  question.rs  quiz_session.rs
src-tauri/src/services/: content_manager.rs  content_seeder.rs  custom_mix_manager.rs  mod.rs  profile_manager.rs  quiz_engine.rs  security.rs  update_service.rs
src-tauri/src/services/tests/: content_manager_tests.rs  mod.rs  profile_manager_tests.rs  quiz_engine_tests.rs  security_tests.rs  update_service_tests.rs
src/api/: README.md  tauri-fixed.ts  tauri.ts
src/components/: AchievementBadge.module.css  AchievementBadge.tsx  AnimationDemo.tsx  AnswerInput.module.css  AnswerInput.tsx  AppShell.module.css  AppShell.tsx  ContentManager.module.css  ContentManager.tsx  CustomMixCreator.module.css  CustomMixCreator.tsx  CustomMixManager.module.css  CustomMixManager.tsx  CustomMixSelector.tsx  (+61 more)
(+34 files in other folders)
